--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "test": "test"
   },
   "dependencies": {
-    "clean-pslg": "^1.1.0"
+    "clean-pslg": "github:mreinstein/clean-pslg"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "tape test/*.js"
   },
@@ -32,5 +31,8 @@
   "bugs": {
     "url": "https://github.com/mikolalysenko/poly-to-pslg/issues"
   },
-  "homepage": "https://github.com/mikolalysenko/poly-to-pslg"
+  "homepage": "https://github.com/mikolalysenko/poly-to-pslg",
+  "devDependencies": {
+    "tape": "^5.9.0"
+  }
 }
